--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,11 +5,9 @@ on:
     branches: [ master ]
     tags: ['*']
   pull_request:
-  schedule:
-    - cron: '0 2 * * 6'
 
 env:
-  IMAGE_NAME: trafex/php-nginx
+  IMAGE_NAME: gometro/php-nginx
   IMAGE_TAG: ${{ github.sha }}
   DOCKER_BUILDKIT: 1
 
@@ -20,9 +18,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx
@@ -52,33 +47,24 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-      - name: Login to Docker Hub
-        if: (github.ref == 'refs/heads/master' && (github.event_name == 'push' || github.event_name == 'schedule' )) || contains(github.ref, 'refs/tags/')
-        uses: docker/login-action@v3
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build multi-arch image and push latest tag
-        if: github.ref == 'refs/heads/master' && (github.event_name == 'push' || github.event_name == 'schedule')
-        run: |-
-          docker buildx build \
-            --cache-from=$IMAGE_NAME:latest \
-            --push \
-            -t $IMAGE_NAME:latest \
-            --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
-            .
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ghcr.io/${{ env.IMAGE_NAME }}
 
-      - name: Set tag in environment
-        if: contains(github.ref, 'refs/tags/')
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build multi-arch image and push release tag
-        if: contains(github.ref, 'refs/tags/')
-        run: |-
-          docker buildx build \
-            --cache-from=$IMAGE_NAME:latest \
-            --push \
-            -t $IMAGE_NAME:$RELEASE_VERSION \
-            --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 \
-            .
